# routes/user.js
@@ -3,22 +3,66 @@ var router = express.Router();
 const DButils = require("./utils/DButils");
 const user_utils = require("./utils/user_utils");
 const recipe_utils = require("./utils/recipes_utils");
+let userRecipeCounter = 0;
+
 
 /**
  * Authenticate all incoming requests by middleware
  */
-router.use(async function (req, res, next) {
-  if (req.session && req.session.user_id) {
-    DButils.execQuery("SELECT user_id FROM users").then((users) => {
-      if (users.find((x) => x.user_id === req.session.user_id)) {
-        req.user_id = req.session.user_id;
-        next();
-      }
-    }).catch(err => next(err));
-  } else {
-    res.sendStatus(401);
+// router.use(async function (req, res, next) {
+//   if (req.session && req.session.user_id) {
+//     DButils.execQuery("SELECT user_id FROM users").then((users) => {
+//       if (users.find((x) => x.user_id === req.session.user_id)) {
+//         req.user_id = req.session.user_id;
+//         next();
+//       }
+//     }).catch(err => next(err));
+//   } else {
+//     res.sendStatus(401);
+//   }
+// });
+
+
+/**
+ * This path gets body with recipeId and save this recipe in the favorites list of the logged-in user
+ */
+router.post('/addRecipe', async (req,res,next) => {
+
+  
+ 
+  try{
+
+    
+    let recipeDeatils =
+    {
+      //username: req.session.user_id,
+      username: "try1",
+      recipeId: userRecipeCounter + 1,
+      title: req.body.title,
+      readyInMinutes: req.body.readyInMinutes,
+      image:  req.body.image,
+      popularity: 0,
+      vegan: req.body.vegan,
+      vegetarian: req.body.vegetarian,
+      glutenFree: req.body.glutenFree,
+      ingredients: req.body.ingredients,
+      instructions: req.body.instructions,
+      servings: req.body.servings
+    }
+
+    console.log("xxx")
+    console.log("xxx" ,req.body.title)
+
+
+    await user_utils.addNewRecipe(recipeDeatils);
+    res.status(200).send("The Recipe Addedd Successfully");
+
+    userRecipeCounter++;
+
+    } catch(error){
+    next(error);
   }
-});
+})
 
 
 /**
